--- a/index.html
+++ b/index.html
@@ -1,10 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>login</title>
+    <style>
+        form{
+            background-color: aqua;
+            padding: 3%;
+            border: 1px solid black;
+            width: 300px;
+            align-items: center;
+            justify-content: center;
+            height: auto;
+        }
+        body{
+            background-color: lightblue;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>This is a simple HTML document.</p>
+    <form>
+        <h1>Login</h1>
+        <label for="username">Username:</label>
+        <input type="text" name="username" required>
+        <br>
+        <label for="password">Password:</label>
+        <input type="password" name="password" required>
+        <br>
+        <center><button type="submit">Login</button></center>
+    </form>
 </body>
 </html>
